Fix Footer responsiveness while on mobile

--- a/ui/public/styles/App.css
+++ b/ui/public/styles/App.css
@@ -3,6 +3,8 @@ body {
   color: #A3906C;
   background-image: url(background.jpeg);
   background-blend-mode: screen;
+  position: relative;
+  min-height: 88vh;
 }
 
 
@@ -56,14 +58,18 @@ div.jumbotron {
 
 /************************** Footer **************************/
 
+#content-wrap {
+  padding-bottom: 1rem;
+}
+
 .page-footer {
-  position:absolute;
-  left: 50%;
-  transform:translateX(-50%);
-  bottom:0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1rem; 
   color: #E0A43A;
 }
 
 .page-footer hr {
-  border-top: 5px dashed;
+  border-top: 1px dashed;
 }
